invoice API correction