@@ -83,41 +83,65 @@ public class ClientAgreementCreationHelper {
         }
 
         UUID agreementId = primary.getEntityId();
+        UUID requestedAgreementVersionId = primary.getEntityVersionId();
         UUID clientRoleId = invoice.getClientRoleId();
-        UUID levelRefId = invoice.getLevelId();  // reference_entity_id in locations.levels
+        UUID levelRefOrId = invoice.getLevelId();  // accepts levels.level_id or levels.reference_entity_id
 
         // Use primary entity startDate as as-of date; fallback to today UTC
         LocalDate startDate = primary.getStartDate() != null
                 ? primary.getStartDate()
                 : LocalDate.now(ZoneOffset.UTC);
 
-        OffsetDateTime startAsOfUtc = startDate
-                .atStartOfDay()
-                .atOffset(ZoneOffset.UTC);
-
         // 1) Resolve agreement_version_id, agreement_location_id, classification, purchased_level_id
-        AgreementMeta meta = resolveAgreementMeta(agreementId, levelRefId, startAsOfUtc);
+        AgreementMeta meta = resolveAgreementMeta(agreementId, requestedAgreementVersionId, levelRefOrId, startDate);
+        ZoneId zoneId = resolveZoneId(meta.getLocationTimeZone());
+        OffsetDateTime purchasedOnUtc = OffsetDateTime.now(ZoneOffset.UTC);
+        LocalDateTime purchasedOnLocal = LocalDateTime.now(zoneId);
+        String purchasedOnLocalTz = zoneId.getId();
+
+        LocalDateTime startDateLocal = startDate.atStartOfDay();
+        OffsetDateTime startDateUtc = startDateLocal.atZone(zoneId).toOffsetDateTime().withOffsetSameInstant(ZoneOffset.UTC);
+        String startDateLocalTz = zoneId.getId();
+
+        EndDateBlock endDateBlock = computeEndDateBlock(startDate, zoneId, meta);
 
         // 2) Build downstream ClientAgreementCreateRequest
         ClientAgreementCreateRequest caReq = new ClientAgreementCreateRequest();
         caReq.setAgreementId(meta.getAgreementId());
-        caReq.setAgreementVersionId(meta.getAgreementVersionId());
+        caReq.setAgreementVersionId(
+                requestedAgreementVersionId != null ? requestedAgreementVersionId : meta.getAgreementVersionId());
         caReq.setAgreementLocationId(meta.getAgreementLocationId());
         caReq.setAgreementClassificationId(meta.getAgreementClassificationId());
         caReq.setClientRoleId(clientRoleId);
 
-        // purchased_level_id from resolved lvl.level_id
+        // purchased_level_id from resolved locations.levels.level_id
         caReq.setPurchasedLevelId(meta.getPurchasedLevelId());
-        System.out.println("levelId "+meta.getPurchasedLevelId());
 
-        caReq.setPurchasedOnUtc(OffsetDateTime.now(ZoneOffset.UTC));
-        caReq.setStartDateUtc(startAsOfUtc);
+        caReq.setPurchasedOnUtc(purchasedOnUtc);
+        caReq.setPurchasedOnLocal(purchasedOnLocal);
+        caReq.setPurchasedOnLocalTz(purchasedOnLocalTz);
+
+        caReq.setStartDateUtc(startDateUtc);
+        caReq.setStartDateLocal(startDateLocal);
+        caReq.setStartDateLocalTz(startDateLocalTz);
+
+        caReq.setEndDateUtc(endDateBlock.endDateUtc());
+        caReq.setEndDateLocal(endDateBlock.endDateLocal());
+        caReq.setEndDateLocalTz(endDateBlock.endDateLocalTz());
+
+        caReq.setObligationStartUtc(startDateUtc);
+        caReq.setObligationEndUtc(endDateBlock.obligationEndUtc());
 
         // Let downstream default to ACTIVE status via code
         caReq.setClientAgreementStatusCode("DRAFT");
 
-        // (Optional) If you want, you can later map promotions/upsell items here
-        caReq.setPromotions(Collections.emptyList());
+        if (primary.getPromotionId() != null) {
+            PromotionCreateDto promo = new PromotionCreateDto();
+            promo.setPromotionVersionId(primary.getPromotionId());
+            caReq.setPromotions(List.of(promo));
+        } else {
+            caReq.setPromotions(Collections.emptyList());
+        }
         caReq.setUpsellItems(Collections.emptyList());
 
         // 3) Call downstream API
@@ -131,23 +155,31 @@ public class ClientAgreementCreationHelper {
      *  - as-of timestamp (start date)
      */
     private AgreementMeta resolveAgreementMeta(UUID agreementId,
-                                               UUID levelReferenceId,
-                                               OffsetDateTime asOf) {
+                                               UUID requestedAgreementVersionId,
+                                               UUID levelReferenceOrId,
+                                               LocalDate asOf) {
 
         String sql = """
             WITH lvl AS (
                 SELECT l.level_id
                 FROM locations.levels l
-                WHERE l.reference_entity_id = :levelRefId
+                WHERE l.reference_entity_id = :levelRefOrId
+                   OR l.level_id = :levelRefOrId
+                LIMIT 1
             ),
             av_choice AS (
                 SELECT av.*
                 FROM agreements.agreement_version av
+                JOIN agreements.agreement ag ON ag.agreement_id = av.agreement_id
                 WHERE av.agreement_id = :agreementId
                   AND av.is_active = TRUE
-                  AND av.valid_from <= :asOf
-                  AND (av.valid_to IS NULL OR av.valid_to >= :asOf)
-                ORDER BY av.valid_from DESC
+                  AND (:requestedAgreementVersionId IS NULL OR av.agreement_version_id = :requestedAgreementVersionId)
+                  AND CAST(av.valid_from AS date) <= CAST(:asOf AS date)
+                  AND (av.valid_to IS NULL OR CAST(av.valid_to AS date) >= CAST(:asOf AS date))
+                ORDER BY
+                  (CASE WHEN av.agreement_version_id = :requestedAgreementVersionId THEN 1 ELSE 0 END) DESC,
+                  (CASE WHEN ag.current_version_id = av.agreement_version_id THEN 1 ELSE 0 END) DESC,
+                  av.valid_from DESC
                 LIMIT 1
             ),
             al_choice AS (
@@ -156,8 +188,8 @@ public class ClientAgreementCreationHelper {
                 JOIN lvl ON al.level_id = lvl.level_id
                 JOIN av_choice av ON av.agreement_version_id = al.agreement_version_id
                 WHERE al.is_active = TRUE
-                  AND al.start_date <= :asOf
-                  AND (al.end_date IS NULL OR al.end_date >= :asOf)
+                  AND CAST(al.start_date AS date) <= CAST(:asOf AS date)
+                  AND (al.end_date IS NULL OR CAST(al.end_date AS date) >= CAST(:asOf AS date))
                 ORDER BY al.start_date DESC
                 LIMIT 1
             )
@@ -166,16 +198,29 @@ public class ClientAgreementCreationHelper {
                 a.agreement_classification_id,
                 av_choice.agreement_version_id,
                 al_choice.agreement_location_id,
-                (SELECT level_id FROM lvl) AS purchased_level_id
+                (SELECT level_id FROM lvl) AS purchased_level_id,
+                loc.timezone AS location_timezone,
+                at.duration_value AS term_duration_value,
+                ut.code AS term_duration_unit_code
             FROM agreements.agreement a
             JOIN av_choice ON av_choice.agreement_id = a.agreement_id
             JOIN al_choice ON al_choice.agreement_version_id = av_choice.agreement_version_id
+            JOIN lvl ON true
+            LEFT JOIN locations."location" loc ON loc.location_id = (
+                SELECT l.reference_entity_id
+                FROM locations.levels l
+                WHERE l.level_id = lvl.level_id
+                LIMIT 1
+            )
+            LEFT JOIN agreements.agreement_term at ON at.agreement_term_id = a.agreement_term_id
+            LEFT JOIN agreements.lu_duration_unit_type ut ON ut.duration_unit_type_id = at.duration_unit_type_id
             WHERE a.agreement_id = :agreementId
             """;
 
         MapSqlParameterSource params = new MapSqlParameterSource()
                 .addValue("agreementId", agreementId)
-                .addValue("levelRefId", levelReferenceId)
+                .addValue("levelRefOrId", levelReferenceOrId)
+                .addValue("requestedAgreementVersionId", requestedAgreementVersionId)
                 .addValue("asOf", asOf);
 
         try {
@@ -183,13 +228,15 @@ public class ClientAgreementCreationHelper {
         } catch (EmptyResultDataAccessException ex) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
                     "Unable to resolve agreement metadata for agreementId=" + agreementId +
-                            ", levelRefId=" + levelReferenceId +
+                            ", levelRefOrId=" + levelReferenceOrId +
+                            ", requestedAgreementVersionId=" + requestedAgreementVersionId +
                             ", asOf=" + asOf);
         }
     }
 
     private UUID invokeClientAgreementCreate(ClientAgreementCreateRequest caReq) {
         String url = clientAgreementServiceBaseUrl;
+        System.out.println("[invokeClientAgreementCreate] requestBody=" + caReq);
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
@@ -224,6 +271,65 @@ public class ClientAgreementCreationHelper {
         }
     }
 
+    private ZoneId resolveZoneId(String tz) {
+        if (tz == null || tz.isBlank()) {
+            return ZoneOffset.UTC;
+        }
+        try {
+            return ZoneId.of(tz.trim());
+        } catch (DateTimeException ex) {
+            return ZoneOffset.UTC;
+        }
+    }
+
+    /**
+     * Contract end is the last inclusive instant before the exclusive end date.
+     * Example: start 2026-04-09 00:00, one-year exclusive end 2027-04-09 → last inclusive
+     * {@code 2027-04-08T23:59:59} in the location zone.
+     */
+    private EndDateBlock computeEndDateBlock(LocalDate startDate, ZoneId zoneId, AgreementMeta meta) {
+        boolean isContinuous = meta.getTermDurationValue() == null
+                || meta.getTermDurationUnitCode() == null
+                || "CONTINUOUS".equalsIgnoreCase(meta.getTermDurationUnitCode())
+                || "CONTINUE".equalsIgnoreCase(meta.getTermDurationUnitCode());
+
+        if (isContinuous) {
+            LocalDate exclusiveEnd = startDate.plusYears(1);
+            TermEndInstant obligation = lastInclusiveEndBeforeExclusiveEnd(exclusiveEnd, zoneId);
+            return new EndDateBlock(null, null, null, obligation.utc());
+        }
+
+        LocalDate exclusiveEnd = addTermDuration(startDate, meta.getTermDurationValue(), meta.getTermDurationUnitCode());
+        if (exclusiveEnd == null) {
+            return new EndDateBlock(null, null, null, null);
+        }
+        TermEndInstant end = lastInclusiveEndBeforeExclusiveEnd(exclusiveEnd, zoneId);
+        return new EndDateBlock(end.utc(), end.local(), end.tzId(), end.utc());
+    }
+
+    private static TermEndInstant lastInclusiveEndBeforeExclusiveEnd(LocalDate exclusiveEndDate, ZoneId zoneId) {
+        LocalDate lastInclusiveLocalDate = exclusiveEndDate.minusDays(1);
+        LocalDateTime lastInclusiveLocal = lastInclusiveLocalDate.atTime(23, 59, 59);
+        OffsetDateTime utc = lastInclusiveLocal.atZone(zoneId).toOffsetDateTime().withOffsetSameInstant(ZoneOffset.UTC);
+        return new TermEndInstant(utc, lastInclusiveLocal, zoneId.getId());
+    }
+
+    private record TermEndInstant(OffsetDateTime utc, LocalDateTime local, String tzId) {
+    }
+
+    private LocalDate addTermDuration(LocalDate startDate, Integer duration, String unitCode) {
+        if (startDate == null || duration == null || unitCode == null) {
+            return null;
+        }
+        return switch (unitCode.toUpperCase(Locale.ROOT)) {
+            case "DAY", "DAYS" -> startDate.plusDays(duration);
+            case "WEEK", "WEEKS" -> startDate.plusWeeks(duration);
+            case "MONTH", "MONTHS" -> startDate.plusMonths(duration);
+            case "YEAR", "YEARS" -> startDate.plusYears(duration);
+            default -> startDate.plusMonths(duration);
+        };
+    }
+
     /* ======================= Internal models / mappers ======================= */
 
     @Data
@@ -233,6 +339,15 @@ public class ClientAgreementCreationHelper {
         private UUID agreementVersionId;
         private UUID agreementLocationId;
         private UUID purchasedLevelId;
+        private String locationTimeZone;
+        private Integer termDurationValue;
+        private String termDurationUnitCode;
+    }
+
+    private record EndDateBlock(OffsetDateTime endDateUtc,
+                                LocalDateTime endDateLocal,
+                                String endDateLocalTz,
+                                OffsetDateTime obligationEndUtc) {
     }
 
     private static class AgreementMetaRowMapper implements RowMapper<AgreementMeta> {
@@ -244,6 +359,10 @@ public class ClientAgreementCreationHelper {
             m.setAgreementVersionId(getUuid(rs, "agreement_version_id"));
             m.setAgreementLocationId(getUuid(rs, "agreement_location_id"));
             m.setPurchasedLevelId(getUuid(rs, "purchased_level_id"));
+            m.setLocationTimeZone(rs.getString("location_timezone"));
+            Object termDuration = rs.getObject("term_duration_value");
+            m.setTermDurationValue(termDuration == null ? null : ((Number) termDuration).intValue());
+            m.setTermDurationUnitCode(rs.getString("term_duration_unit_code"));
             return m;
         }
     }
